[package]
name = "regatta32"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
cortex-m = "0.7"
cortex-m-rtic = "1.0.0"
systick-monotonic = "1.0.0"
defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
# nanorand = { version = "0.6", default-features = false, features = [
#     "wyrand",
#     "getrandom",
# ] }

oorandom = "11.1"

# hal dependencies
embedded-hal = "0.2.3"
serde = { version = "1.0", default-features = false, features = ["derive"] }
stm32f1xx-hal = { version = "0.8", features = ["rt", "stm32f103", "medium"] }


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
lto = 'fat'
overflow-checks = true

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
