[package]
name = "rregatta32"
version = "1.0.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rtic = "1.1"
defmt = "0.3"
defmt-rtt = "0.3"
embedded-hal = "0.2"
oorandom = "11.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
stm32f1xx-hal = { version = "0.9", features = ["rt", "stm32f103"] }
systick-monotonic = "1.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

